# django1

./: .gitignore  livraria_bkp.json  package-lock.json  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_autor_editora_livro.py  0003_livro_autores.py
usuario/migrations/: 0001_initial.py
