[project]
name = "django1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "marco", email = "marcoantperuzzo@gmail.com"},
]
dependencies = ["django>=5.1.3", "djangorestframework>=3.15.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
