[project]
name = "django1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "marco", email = "marcoantperuzzo@gmail.com"},
]
dependencies = ["django>=5.1.3", "djangorestframework>=3.15.2", "django-cors-headers>=4.6.0", "djangorestframework-simplejwt>=5.3.1", "Pillow>=11.0.0", "python-magic>=0.4.27; sys_platform == \"linux\"", "python-magic-bin>=0.4.14; sys_platform == \"win32, darwin\"", "drf-spectacular>=0.27.2", "python-dotenv>=1.0.1", "netifaces>=0.11.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"

[tool.pdm]
distribution = false
